# netis

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_device_hierarchy_wg.py  0003_nmap_source.py  0004_ignored_hosts.py  0005_subnet_scan_settings.py  0006_device_location.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  admin.py  auth.py  devices.py  discovery.py  exports.py  ip_addresses.py  subnets.py  users.py
backend/app/auth/: __init__.py  deps.py  security.py
backend/app/config/: __init__.py  settings.py
backend/app/database/: session.py
backend/app/models/: __init__.py  device.py  ignored_host.py  ip_address.py  observation.py  subnet.py  user.py
backend/app/scanners/: __init__.py  arp.py  leases.py  nmap_scan.py  pihole.py  ping.py  rdns.py  wg.py
backend/app/schemas/: __init__.py  auth.py  device.py  discovery.py  ip_address.py  observation.py  subnet.py
backend/app/services/: notify.py  observations.py  reconcile.py  scanjobs.py  scanning.py  scheduler.py
backend/app/utils/: netaddr.py  oui.py
backend/tests/: conftest.py  test_auth.py  test_devices.py  test_discovery.py  test_export_import.py  test_leases.py  test_reconcile.py  test_scanjobs.py  test_subnets.py  test_wg.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  postcss.config.js  tsconfig.node.json  vite.config.js  vite.config.ts  vitest.config.ts
(+37 files in other folders)
