[project]
name = "netis"
version = "0.2.0"
description = "Lightweight self-hosted IPAM for homelabs"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.5.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "psycopg[binary]>=3.2.0",
    "scapy>=2.5.0",
    "httpx>=0.27.0",
    "email-validator>=2.2.0",
    "cryptography>=48.0.0",
    "httptools>=0.7.1",
    "pip>=26.1.1",
    "psycopg-binary>=3.3.4",
    "pytest>=9.0.3",
    "pyyaml>=6.0.3",
    "uvloop>=0.22.1",
    "watchfiles>=1.2.0",
    "websockets>=16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
